1998-08-09  Yo Ric Dude  <ericmit@ix.netcom.com>

	* Makefile.am, acconfig.h, audio.c, configure.in: Nick Lopez - added
	support for the Advanced Linux Sound Architecture. It seems to work 
	just fine on my SB16 with ALSA driver 0.1.4 and lib 0.0.9.
	still needs audio_alsa.c.
	
	* AUTHORS: updated list of contributors

	* Makefile.am, acconfig.h, audio.c, configure.in, esd-server.h:
	Jeff Dubrule - updated for MkLinux (still need to merge in mix.c)

1998-08-08  Mandrake <mandrake@mandrake.net>
	* fixed Makefile.am to use libtool's versioning correctly :)

1998-08-07  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdlib.c: switched to memcpy instead of bcopy.
	* audio_solaris.c: added a few more recognized devices.
		thx to Tynian and Peter Asobeck for Solaris devices.
	* audio_oss.c: powerpc patches courtesy of mackman.
	* esdcat.c: forgot to check the FILE* returned from open, thx vendu.
	
1998-07-16  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c:
	everything but recording works for irix. irix->linux connectivity
	and back works ok, except for remote recording.  keeping track
	of client states seems to be uglier than it needs to be. not so
	mental note to look into that. 

1998-07-15  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c, test-script:
	almost got it all on irix.  still need to tweak sample caching 
	problems. other than that. tried to filter out the esdctl calls
	from test-script, as it doesn't work properly with an ESPEAKER set.

	* esd-server.h, players.c, proto.c: finally got the client state
	code to track endian status correctly, on linux and irix.  gross
	macros to track communication protocol level data. need to filter
	those out via cmd line macro at some point...

1998-07-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.h, players.c, proto.c:
	crack one at including communication level diagnostic info.

1998-07-11  Yo Ric Dude  <ericmit@ix.netcom.com>
