@@ -14,7 +14,7 @@ int main(int argc, char **argv)
     int mode = ESD_STREAM, func = ESD_RECORD ;
     esd_format_t format = 0;
 
-    FILE *target = stdout;
+    FILE *target = NULL;
     char *host = NULL;
     char *name = NULL;
     
@@ -35,12 +35,22 @@ int main(int argc, char **argv)
 	{
 	    arg++;
 	    rate = atoi( argv[ arg ] );
+	} else if (target) {
+	    printf("%s: ignoring extra file '%s'\n", argv[0], argv[arg]);
 	} else {
 	    name = argv[ arg ];
 	    target = fopen( name, "w" );
+	    if (!target) {
+		printf("%s: Couldn't write to '%s'\n", argv[0], argv[arg]);
+		name = NULL;
+	    }
 	}
     }
     
+    if (!target) {
+	target = stdout;
+    }
+
     format = bits | channels | mode | func;
     printf( "opening socket, format = 0x%08x at %d Hz\n", 
 	    format, rate );
